--- a/index.html
+++ b/index.html
@@ -69,4 +69,48 @@
     text-shadow: 0 0 6px hotpink;
   }
 </style>
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+<style>
+  /* --- Background --- */
+  body {
+    background-color: black;
+    background-image: url("https://i.pinimg.com/originals/11/c2/38/11c238c51c94fbf822ae0fc6acc88c58.gif");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+  }
+
+  /* --- Profile Boxes --- */
+  .profile, .left, .right, .friends, .blurbs {
+    background: rgba(0,0,0,0.7); /* semi-transparent black */
+    border: 2px solid #ff0000;
+    box-shadow: 0 0 10px #ff0000;
+    color: #fff;
+  }
+
+  /* --- Links --- */
+  a {
+    color: hotpink;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: white;
+    text-shadow: 0 0 6px hotpink;
+  }
+</style>
+
+<div style="background-color: black; color: #c0c0c0; font-family: 'Courier New', monospace; padding: 15px; border: 2px solid #444; text-align: center; line-height: 1.8;">
+  <h3 style="color: #ff0000; text-transform: uppercase; letter-spacing: 2px; text-shadow: 0 0 8px #ff0000;">
+    ⚡ Interests ⚡
+  </h3>
+
+
+  <p style="color: #ff00ff; text-shadow: 0 0 6px hotpink; margin: 5px 0;">Metal 🤘</p>
+  <p style="color: #00ffff; text-shadow: 0 0 6px cyan; margin: 5px 0;">Punk 🖤</p>
+  <p style="color: #ffff00; text-shadow: 0 0 6px yellow; margin: 5px 0;">Games 🎮</p>
+  <p style="color: #ff9900; text-shadow: 0 0 6px orange; margin: 5px 0;">Oldschool Tech 💾</p>
+</div>
 
