--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
       box-shadow: 0 0 10px #ff0000;
     }
 
-    /* --- Main container --- */
-    .container {
+    /* --- Main container with Spotify --- */
+    .main-flex {
       display: flex;
       justify-content: center;
+      align-items: flex-start;
       gap: 20px;
-      flex-wrap: wrap; /* allows stacking on smaller screens */
       margin: 20px;
+      flex-wrap: nowrap; /* always side by side */
     }
 
     .box {
@@ -58,7 +59,7 @@
       border: 2px solid #ff0000;
       box-shadow: 0 0 10px #ff0000;
       padding: 15px;
-      flex: 1 1 300px; /* grows, shrinks, minimum width */
+      width: 300px; /* smaller fixed width to fit next to Spotify */
       min-width: 250px;
     }
 
@@ -106,12 +107,11 @@
       margin-top: 20px;
     }
 
-    /* --- Responsive adjustments --- */
-    @media (max-width: 700px) {
-      .container {
-        flex-direction: column; /* stack boxes vertically on small screens */
-        align-items: center;
-      }
+    /* --- Spotify iframe --- */
+    .spotify-box iframe {
+      border-radius: 12px;
+      width: 300px; /* match box width */
+      height: 352px;
     }
   </style>
 </head>
@@ -124,8 +124,8 @@
     <img src="https://preview.redd.it/qfcr91y57lh51.jpg?width=640&crop=smart&auto=webp&s=d4be368fa38cc2d79cfaf4b8b06562b93ecdb049" alt="Joe Working Man">
   </div>
 
-  <!-- Main content: About Me + Interests side by side -->
-  <div class="container">
+  <!-- About Me + Interests + Spotify side by side -->
+  <div class="main-flex">
     <!-- About Me Box -->
     <div class="box">
       <h2>☠ WELCOME TO MY PAGE ☠</h2>
@@ -147,11 +147,11 @@
       <p class="games">Games 🎮</p>
       <p class="tech">Oldschool Tech 💾</p>
     </div>
-  </div>
 
-  <!-- Spotify Embed -->
-  <div style="display: flex; justify-content: center; margin: 20px 0;">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <!-- Spotify Embed Box -->
+    <div class="box spotify-box">
+      <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
   </div>
 
   <!-- Footer Quote -->
