--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Blog</title>
   <style>
-    /* --- Background --- */
     body {
       background-color: black;
       background-image: url("https://i.pinimg.com/originals/11/c2/38/11c238c51c94fbf822ae0fc6acc88c58.gif");
@@ -19,14 +18,12 @@
       padding: 0;
     }
 
-    /* --- Neon text --- */
     .neon-text {
       color: #ff0000;
       text-shadow: 0 0 8px #ff0000;
       margin: 0;
     }
 
-    /* --- Top images --- */
     .top-flex {
       display: flex;
       align-items: center;
@@ -44,26 +41,15 @@
       box-shadow: 0 0 10px #ff0000;
     }
 
-    /* --- Main container with Spotify --- */
-    .main-flex {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 20px;
-      margin: 20px;
-      flex-wrap: nowrap; /* always side by side */
-    }
-
-    .box {
+    .about-box {
       background: rgba(0,0,0,0.7);
       border: 2px solid #ff0000;
       box-shadow: 0 0 10px #ff0000;
-      padding: 15px;
-      width: 300px; /* smaller fixed width to fit next to Spotify */
-      min-width: 250px;
+      padding: 20px;
+      margin: 0 20px;
     }
 
-    .box h2, .box h3 {
+    .about-box h2 {
       color: #ff0000;
       text-transform: uppercase;
       letter-spacing: 2px;
@@ -72,24 +58,50 @@
       margin-top: 0;
     }
 
-    .box p {
+    .about-box p {
       font-size: 14px;
       line-height: 1.6;
       text-align: center;
       margin: 5px 0;
     }
 
+    /* Container for Interests + Spotify */
+    .bottom-flex {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px;
+      margin: 20px;
+      flex-wrap: wrap;
+    }
+
+    .box {
+      background: rgba(0,0,0,0.7);
+      border: 2px solid #ff0000;
+      box-shadow: 0 0 10px #ff0000;
+      padding: 15px;
+      width: 300px;
+      min-width: 250px;
+    }
+
+    .box h3 {
+      color: #ff0000;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-align: center;
+      text-shadow: 0 0 8px #ff0000;
+      margin-top: 0;
+    }
+
     .interests p {
       text-shadow: 0 0 6px;
       font-weight: bold;
     }
-
     .interests .metal { color: #ff00ff; text-shadow: 0 0 6px hotpink; }
     .interests .punk { color: #00ffff; text-shadow: 0 0 6px cyan; }
     .interests .games { color: #ffff00; text-shadow: 0 0 6px yellow; }
     .interests .tech { color: #ff9900; text-shadow: 0 0 6px orange; }
 
-    /* --- Links --- */
     a {
       color: hotpink;
       text-decoration: none;
@@ -99,7 +111,6 @@
       text-shadow: 0 0 6px hotpink;
     }
 
-    /* --- Footer --- */
     .footer {
       text-align: center;
       font-size: 12px;
@@ -107,10 +118,9 @@
       margin-top: 20px;
     }
 
-    /* --- Spotify iframe --- */
     .spotify-box iframe {
       border-radius: 12px;
-      width: 300px; /* match box width */
+      width: 300px;
       height: 352px;
     }
   </style>
@@ -124,22 +134,21 @@
     <img src="https://preview.redd.it/qfcr91y57lh51.jpg?width=640&crop=smart&auto=webp&s=d4be368fa38cc2d79cfaf4b8b06562b93ecdb049" alt="Joe Working Man">
   </div>
 
-  <!-- About Me + Interests + Spotify side by side -->
-  <div class="main-flex">
-    <!-- About Me Box -->
-    <div class="box">
-      <h2>☠ WELCOME TO MY PAGE ☠</h2>
-      <p><b>True till death.</b><br>
-      <i>Keep my friends close, keep my enemies closer.</i><br>
-      <i>Living loud, living proud.</i><br>
-      <span style="color: #ff9900; text-shadow: 0 0 6px #ff9900;">// Punk • Metal • Chaos //</span></p>
-
-      <div style="margin-top: 20px; border-top: 1px dashed #666; padding-top: 10px; text-align: center;">
-        <b>🖕 ⋆♱✮♱⋆ 🖤</b>
-      </div>
+  <!-- About Me (full width, on top) -->
+  <div class="about-box">
+    <h2>☠ WELCOME TO MY PAGE ☠</h2>
+    <p><b>True till death.</b><br>
+    <i>Keep my friends close, keep my enemies closer.</i><br>
+    <i>Living loud, living proud.</i><br>
+    <span style="color: #ff9900; text-shadow: 0 0 6px #ff9900;">// Punk • Metal • Chaos //</span></p>
+    <div style="margin-top: 20px; border-top: 1px dashed #666; padding-top: 10px; text-align: center;">
+      <b>🖕 ⋆♱✮♱⋆ 🖤</b>
     </div>
+  </div>
 
-    <!-- Interests Box -->
+  <!-- Interests + Spotify side by side -->
+  <div class="bottom-flex">
+    <!-- Interests -->
     <div class="box interests">
       <h3>⚡ Interests ⚡</h3>
       <p class="metal">Metal 🤘</p>
@@ -148,13 +157,13 @@
       <p class="tech">Oldschool Tech 💾</p>
     </div>
 
-    <!-- Spotify Embed Box -->
+    <!-- Spotify -->
     <div class="box spotify-box">
       <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
 
-  <!-- Footer Quote -->
+  <!-- Footer -->
   <div class="footer">
     “If the music’s too loud, you’re too old.” 🤘
   </div>
