--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Blog</title>
+  <title> Mylife </title>
   <style>
     body {
       background-color: black;
@@ -138,6 +138,7 @@
   <!-- About Me (full width) -->
   <div class="about-box">
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
+    <p><b> est. 2025 </b><br>
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
@@ -168,5 +169,6 @@
 
 </body>
 </html>
+
 
 
