--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Mylife </title>
+  <title>Mylife</title>
   <style>
+    /* --- Background & Base --- */
     body {
       background-color: black;
       background-image: url("https://i.pinimg.com/originals/11/c2/38/11c238c51c94fbf822ae0fc6acc88c58.gif");
@@ -24,6 +25,7 @@
       margin: 0;
     }
 
+    /* --- Header Images + Title --- */
     .top-flex {
       display: flex;
       align-items: center;
@@ -41,7 +43,7 @@
       box-shadow: 0 0 10px #ff0000;
     }
 
-    /* --- About Me Box (top, full width) --- */
+    /* --- About Me --- */
     .about-box {
       background: rgba(0,0,0,0.7);
       border: 2px solid #ff0000;
@@ -66,7 +68,7 @@
       margin: 5px 0;
     }
 
-    /* --- Bottom Flex: Interests + Spotify --- */
+    /* --- Interests + Spotify Flex Layout --- */
     .bottom-flex {
       display: flex;
       justify-content: center;
@@ -76,7 +78,8 @@
       flex-wrap: wrap;
     }
 
-    .box {
+    /* --- Interests Box --- */
+    .interests {
       background: rgba(0,0,0,0.7);
       border: 2px solid #ff0000;
       box-shadow: 0 0 10px #ff0000;
@@ -85,7 +88,7 @@
       min-width: 250px;
     }
 
-    .box h3 {
+    .interests h3 {
       color: #ff0000;
       text-transform: uppercase;
       letter-spacing: 2px;
@@ -95,34 +98,66 @@
     }
 
     .interests p {
-      text-shadow: 0 0 6px;
       font-weight: bold;
+      text-align: center;
+      margin: 8px 0;
     }
-    .interests .metal { color: #ff00ff; text-shadow: 0 0 6px hotpink; }
-    .interests .punk { color: #00ffff; text-shadow: 0 0 6px cyan; }
-    .interests .games { color: #ffff00; text-shadow: 0 0 6px yellow; }
-    .interests .tech { color: #ff9900; text-shadow: 0 0 6px orange; }
 
+    .metal { color: #ff00ff; text-shadow: 0 0 6px hotpink; }
+    .punk { color: #00ffff; text-shadow: 0 0 6px cyan; }
+    .games { color: #ffff00; text-shadow: 0 0 6px yellow; }
+    .tech { color: #ff9900; text-shadow: 0 0 6px orange; }
+
+    /* --- Spotify Box --- */
+    .spotify-box {
+      background: rgba(0,0,0,0.7);
+      border: 2px solid #ff0000;
+      box-shadow: 0 0 10px #ff0000;
+      padding: 10px;
+      width: 400px;
+      max-width: 90vw;
+    }
+
+    .spotify-box iframe {
+      border-radius: 12px;
+      width: 100%;
+      height: 400px;
+    }
+
+    /* --- Links --- */
     a {
       color: hotpink;
       text-decoration: none;
     }
+
     a:hover {
       color: white;
       text-shadow: 0 0 6px hotpink;
     }
 
+    /* --- Footer --- */
     .footer {
       text-align: center;
       font-size: 12px;
       color: #999;
       margin-top: 20px;
+      margin-bottom: 30px;
     }
-     <b> G0od mus1c </b>
-    .spotify-box iframe {
-      border-radius: 12px;
-      width: 300px;
-      height: 352px;
+
+    /* --- Mobile Fixes --- */
+    @media (max-width: 768px) {
+      .bottom-flex {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .spotify-box, .interests {
+        width: 90%;
+      }
+
+      .spotify-box iframe {
+        height: 380px;
+      }
     }
   </style>
 </head>
@@ -138,7 +173,7 @@
   <!-- About Me (full width) -->
   <div class="about-box">
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
-    <p><b> est. 2025 </b><br>
+    <p><b>est. 2025</b></p>
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
@@ -150,15 +185,20 @@
 
   <!-- Interests + Spotify (side by side) -->
   <div class="bottom-flex">
-    <div class="box interests">
+    <div class="interests">
       <h3>⚡ Interests ⚡</h3>
       <p class="metal">Metal 🤘</p>
       <p class="punk">Punk 🖤</p>
       <p class="games">Games 🎮</p>
       <p class="tech">Oldschool Tech 💾</p>
     </div>
-    <div class="box spotify-box">
-      <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+    <div class="spotify-box">
+      <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator"
+        frameborder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+      </iframe>
     </div>
   </div>
 
@@ -169,6 +209,3 @@
 
 </body>
 </html>
-
-
-
