--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <!-- About Me (full width) -->
   <div class="about-box">
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
-    <p><b>est. 2025</b></p>
+    <b>est. 2025</b> <br>
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
@@ -209,3 +209,4 @@
 
 </body>
 </html>
+
