--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
   <!-- About Me (full width) -->
   <div class="about-box">
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
-    <b>est. 2025</b> <br>
+    <h3>est. 2025</h3><br>
+    
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
@@ -209,4 +210,5 @@
 
 </body>
 </html>
+
 
