--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       box-shadow: 0 0 10px #ff0000;
       padding: 20px;
       margin: 0 20px;
+      text-align: center; /* Centers all text inside */
     }
 
     .about-box h2 {
       color: #ff0000;
       text-transform: uppercase;
       letter-spacing: 2px;
-      text-align: center;
       text-shadow: 0 0 8px #ff0000;
       margin-top: 0;
     }
@@ -64,7 +64,6 @@
     .about-box p {
       font-size: 14px;
       line-height: 1.6;
-      text-align: center;
       margin: 5px 0;
     }
 
@@ -86,20 +85,19 @@
       padding: 15px;
       width: 300px;
       min-width: 250px;
+      text-align: center;
     }
 
     .interests h3 {
       color: #ff0000;
       text-transform: uppercase;
       letter-spacing: 2px;
-      text-align: center;
       text-shadow: 0 0 8px #ff0000;
       margin-top: 0;
     }
 
     .interests p {
       font-weight: bold;
-      text-align: center;
       margin: 8px 0;
     }
 
@@ -173,13 +171,12 @@
   <!-- About Me (full width) -->
   <div class="about-box">
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
-    <h3>est. 2025</h3><br>
-    
+    <p><b>est. 2025</b></p>
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
     <span style="color: #ff9900; text-shadow: 0 0 6px #ff9900;">// Punk • Metal • Chaos //</span></p>
-    <div style="margin-top: 20px; border-top: 1px dashed #666; padding-top: 10px; text-align: center;">
+    <div style="margin-top: 20px; border-top: 1px dashed #666; padding-top: 10px;">
       <b>🖕 ⋆♱✮♱⋆ 🖤</b>
     </div>
   </div>
@@ -210,5 +207,3 @@
 
 </body>
 </html>
-
-
