--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       box-shadow: 0 0 10px #ff0000;
       padding: 20px;
       margin: 0 20px;
-      text-align: center; /* Centers all text inside */
+      text-align: center;
     }
 
     .about-box h2 {
@@ -61,9 +61,18 @@
       margin-top: 0;
     }
 
+    .est {
+      text-align: center;
+      color: #ff0000;
+      text-shadow: 0 0 6px #ff0000;
+      font-weight: bold;
+      margin: 8px 0;
+    }
+
     .about-box p {
       font-size: 14px;
       line-height: 1.6;
+      text-align: center;
       margin: 5px 0;
     }
 
@@ -122,17 +131,6 @@
       height: 400px;
     }
 
-    /* --- Links --- */
-    a {
-      color: hotpink;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: white;
-      text-shadow: 0 0 6px hotpink;
-    }
-
     /* --- Footer --- */
     .footer {
       text-align: center;
@@ -168,10 +166,10 @@
     <img src="https://preview.redd.it/qfcr91y57lh51.jpg?width=640&crop=smart&auto=webp&s=d4be368fa38cc2d79cfaf4b8b06562b93ecdb049" alt="Joe Working Man">
   </div>
 
-  <!-- About Me (full width) -->
+  <!-- About Me -->
   <div class="about-box">
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
-    <p><b>est. 2025</b></p>
+    <div class="est">est. 2025</div>
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
