--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@
     .games { color: #ffff00; text-shadow: 0 0 6px yellow; }
     .tech { color: #ff9900; text-shadow: 0 0 6px orange; }
 
+    /* --- Music Box under Interests --- */
+    .music-box {
+      background-color: black;
+      border: 2px solid hotpink;
+      padding: 10px;
+      margin-top: 15px;
+      box-shadow: 0 0 10px hotpink;
+    }
+
+    .music-box h3 {
+      color: #ff0000;
+      text-transform: uppercase;
+      text-shadow: 0 0 8px #ff0000;
+      margin: 0 0 5px 0;
+    }
+
+    .music-box p {
+      color: #ff00ff;
+      text-shadow: 0 0 6px hotpink;
+      margin: 0;
+      font-weight: bold;
+      line-height: 1.5;
+    }
+
     /* --- Spotify Box --- */
     .spotify-box {
       background: rgba(0,0,0,0.7);
@@ -173,7 +197,7 @@
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i><br>
     <i>Living loud, living proud.</i><br>
-    <i>born in 2011.</i>   
+    <i>born in 2011</i>
     <span style="color: #ff9900; text-shadow: 0 0 6px #ff9900;">// Punk • Metal • Chaos //</span></p>
     <div style="margin-top: 20px; border-top: 1px dashed #666; padding-top: 10px;">
       <b>🖕 ⋆♱✮♱⋆ 🖤</b>
@@ -188,6 +212,18 @@
       <p class="punk">Punk 🖤</p>
       <p class="games">Games 🎮</p>
       <p class="tech">Oldschool Tech 💾</p>
+
+      <!-- NEW MUSIC BOX UNDER INTERESTS -->
+      <div class="music-box">
+        <h3>Music</h3>
+        <p>
+          ⚡ Slipknot<br/>
+          ⚡ Pantera<br/>
+          ⚡ Misfits<br/>
+          ⚡ Nirvana<br/>
+          ⚡ And a bunch moree
+        </p>
+      </div>
     </div>
 
     <div class="spotify-box">
@@ -206,5 +242,3 @@
 
 </body>
 </html>
-
-
