--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <h2>☠ WELCOME TO MY PAGE ☠</h2>
     <div class="est">est. 2025</div>
     <p><b>True till death.</b><br>
-    <i>Keep my friends close, keep my enemies closer.</i><br>
+    <i>Keep my friends close, keep my enemies closer.</i>
     <i>Living loud, living proud.</i><br>
     <i>born in 2011</i>
     <span style="color: #ff9900; text-shadow: 0 0 6px #ff9900;">// Punk • Metal • Chaos //</span></p>
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
