--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <p><b>True till death.</b><br>
     <i>Keep my friends close, keep my enemies closer.</i>
     <i>Living loud, living proud.</i><br>
-    <i>born in 2011</i>
+    <b>born in 2011</b><br>
     <span style="color: #ff9900; text-shadow: 0 0 6px #ff9900;">// Punk • Metal • Chaos //</span></p>
     <div style="margin-top: 20px; border-top: 1px dashed #666; padding-top: 10px;">
       <b>🖕 ⋆♱✮♱⋆ 🖤</b>
@@ -242,4 +242,5 @@
 
 </body>
 </html>
+
 
