--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
-<div class="bottom-row">
-  <!-- YouTube Box (Left Column) -->
-  <div class="youtube-box">
+<div style="display: flex; justify-content: space-between; gap: 20px;">
+  <!-- Left Column: YouTube Video -->
+  <div style="flex: 1;">
     <h3>Fav YouTuber rn</h3>
     <a href="https://www.youtube.com/@ElectroBOOM" target="_blank">Visit ElectroBOOM on YouTube</a>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5oK8g3g4Q0I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FFe0CCeTDd8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
-  <!-- Right Column -->
-  <div class="right-column">
-    <div style="display:flex; gap:20px; flex-wrap:wrap;">
-      <!-- Interests Box -->
-      <div class="box interests">
-        <h3>⚡ Interests ⚡</h3>
-        <p class="metal">Metal 🤘</p>
-        <p class="punk">Punk 🖤</p>
-        <p class="games">Games 🎮</p>
-        <p class="tech">Oldschool Tech 💾</p>
+  <!-- Right Column: Interests, Music, and Spotify -->
+  <div style="flex: 1; display: flex; flex-direction: column; gap: 20px;">
+    <div>
+      <h3>⚡ Interests ⚡</h3>
+      <p>Metal 🤘</p>
+      <p>Punk 🖤</p>
+      <p>Games 🎮</p>
+      <p>Oldschool Tech 💾</p>
+    </div>
 
-        <!-- Music Box -->
-        <div class="music-box">
-          <h3>Music</h3>
-          <p>⚡ Slipknot<br>⚡ Pantera<br>⚡ Misfits<br>⚡ Nirvana<br>⚡ And a bunch moree</p>
-        </div>
-      </div>
+    <div>
+      <h3>Music</h3>
+      <p>⚡ Slipknot</p>
+      <p>⚡ Pantera</p>
+      <p>⚡ Misfits</p>
+      <p>⚡ Nirvana</p>
+      <p>⚡ And a bunch moree</p>
+    </div>
 
-      <!-- Spotify Box -->
-      <div class="box spotify-box">
-        <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      </div>
+    <div>
+      <h3>Spotify Playlist</h3>
+      <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
 </div>
