--- a/index.html
+++ b/index.html
@@ -164,6 +164,32 @@ body {
   text-shadow: 0 0 8px #ff00ff;
 }
 
+/* Buttons box */
+.buttons-box {
+  text-align: center;
+  background: rgba(0,0,0,0.8);
+  border: 2px solid #ff0000;
+  box-shadow: 0 0 10px #ff0000;
+  padding: 10px;
+}
+
+.buttons-box a {
+  display: inline-block;
+  background: rgba(255,0,0,0.8);
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 12px;
+  margin: 5px;
+  border-radius: 6px;
+  box-shadow: 0 0 8px #ff0000;
+}
+
+.buttons-box a:hover {
+  background: #ff0000;
+  color: white;
+}
+
 /* Footer */
 .footer {
   text-align: center;
@@ -197,6 +223,7 @@ body {
 <div class="about-box">
   <h2>☠ WELCOME TO MY PAGE ☠</h2>
   <p class="est"><b>est. 2025</b></p>
+  <p class="est"><b>born in 2011</b></p>
   <p><b>True till death.</b><br>
   <i>Keep my friends close, keep my enemies closer.</i><br>
   <i>Living loud, living proud.</i><br>
@@ -208,13 +235,18 @@ body {
 
 <!-- Bottom row -->
 <div class="bottom-row">
-
-  <!-- Right column -->
   <div class="right-column">
 
-    <!-- YouTube link box -->
+    <!-- YouTube link -->
     <div class="youtube-link">
       <a href="https://www.youtube.com/@ElectroBOOM" target="_blank">Fav YouTuber rn</a>
+    </div>
+
+    <!-- Buttons box -->
+    <div class="buttons-box">
+      <a href="page1.html">Page 1</a>
+      <a href="page2.html">Page 2</a>
+      <a href="page3.html">Page 3</a>
     </div>
 
     <!-- Interests Box -->
