--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@ body {
   font-size: 14px;
   line-height: 1.6;
   margin: 8px 0;
+  color: #c0c0c0;
 }
 
 .est {
   text-align: center;
-  color: #ff0000;
-  text-shadow: 0 0 6px #ff0000;
+  color: #ff0000; /* keep red */
   font-weight: bold;
   margin: 8px 0;
 }
