--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Page 1</title>
+<title>vids</title>
 <style>
 body {
   background-color: black;
@@ -44,10 +44,11 @@ p {
 <body>
 
 <div class="container">
-  <h1>Page 1</h1>
+  <h1>vids</h1>
   <p>This is a placeholder for Page 1. You can add your own content here later.</p>
   <p><a href="index.html" style="color: hotpink; text-decoration: none; text-shadow: 0 0 6px hotpink;">⬅ Back to Home</a></p>
 </div>
 
 </body>
 </html>
+
