--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@ body {
 
 <!-- Buttons Box -->
 <div class="buttons-box">
-  <a href="page1.html">Page 1</a>
-  <a href="page2.html">Page 2</a>
-  <a href="page3.html">Page 3</a>
+  <a href="page1.html">vids/pics</a>
+  <a href="page2.html">rambles</a>
+  <a href="page3.html">chat</a>
 </div>
 
 <!-- Bottom Row: Interests + Music + Spotify -->
@@ -268,3 +268,4 @@ body {
 
 </body>
 </html>
+
