--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ a:hover {
 <div class="about-box">
   <h2>☠ WELCOME TO MY PAGE ☠</h2>
   <p><b>est. 2025</b><br>
+    <span style="color: #ff0000; text-shadow: 0 0 8px #ff0000; font-weight: bold;">Made by IamTheLight11</span><br>
   <b>True till death.</b><br>
   <i>Keep my friends close, keep my enemies closer.</i><br>
   <i>Living loud, living proud.</i><br>
@@ -200,3 +201,4 @@ a:hover {
 
 </body>
 </html>
+
