--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@ body {
 
 <!-- About Me -->
 <div class="about-box">
-  <h2>☠ WELCOME TO MY PAGE ☠</h2>
+  <h2>☠ WELCOME TO MY SITE ☠</h2>
+
   <p>
     <b>est. 2025</b><br>
     <span style="color: #ff0000; text-shadow: 0 0 8px #ff0000; font-weight: bold;">Made by IamTheLight11</span><br>
@@ -228,3 +229,4 @@ body {
 
 </body>
 </html>
+
