--- a/page1.html
+++ b/page1.html
@@ -45,10 +45,11 @@ p {
 
 <div class="container">
   <h1>vids</h1>
-  <p>This is a placeholder for Page 1. You can add your own content here later.</p>
+  <p>This is a placeholder for Page 1.</p>
   <p><a href="index.html" style="color: hotpink; text-decoration: none; text-shadow: 0 0 6px hotpink;">⬅ Back to Home</a></p>
 </div>
 
 </body>
 </html>
+
 
