--- a/page2.html
+++ b/page2.html
@@ -54,9 +54,10 @@ a:hover {
 
 <div class="container">
   <h1>Page 2</h1>
-  <p>This is a placeholder for Page 2. You can add your content here later.</p>
+  <p>This is a placeholder for Page 2.</p>
   <p><a href="index.html">⬅ Back to Home</a></p>
 </div>
 
 </body>
 </html>
+
