--- a/page3.html
+++ b/page3.html
@@ -55,9 +55,10 @@ a:hover {
 
 <div class="container">
   <h1>Page 3</h1>
-  <p>This page will be the Chat / Forum. For now, it's a placeholder.</p>
+  <p>This page will be the Chat</p>
   <p><a href="index.html">⬅ Back to Home</a></p>
 </div>
 
 </body>
 </html>
+
