--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
 <script>
-  // Firebase config
+  // Firebase configuration
   const firebaseConfig = {
     apiKey: "YOUR_API_KEY",
     authDomain: "YOUR_PROJECT.firebaseapp.com",
@@ -107,10 +107,10 @@
   function signup() {
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
+
     auth.createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
+      .then(() => {
         messageEl.textContent = "Account created! Redirecting...";
-        // Redirect to index.html after signup
         setTimeout(() => { window.location.href = "index.html"; }, 1000);
       })
       .catch((error) => {
@@ -121,10 +121,10 @@
   function login() {
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
+
     auth.signInWithEmailAndPassword(email, password)
-      .then((userCredential) => {
+      .then(() => {
         messageEl.textContent = "Logged in! Redirecting...";
-        // Redirect to index.html after login
         setTimeout(() => { window.location.href = "index.html"; }, 1000);
       })
       .catch((error) => {
