--- a/login.html
+++ b/login.html
@@ -74,6 +74,7 @@
 
 <div class="auth-box">
   <h3>Sign Up / Log In</h3>
+  <input id="username" type="text" placeholder="Username (Sign Up Only)">
   <input id="email" type="email" placeholder="Email">
   <input id="password" type="password" placeholder="Password">
   <div>
@@ -83,14 +84,13 @@
   <p id="auth-message"></p>
 </div>
 
-<!-- Firebase SDKs (modular v9+) -->
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics.js";
+<!-- Firebase SDKs (compat version for local use) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
 
-  // Your web app's Firebase configuration
+<script>
+  // Initialize Firebase
   const firebaseConfig = {
     apiKey: "AIzaSyBK5Hdc5AMtXqYEy1Zd2kyhUIhRAALadEA",
     authDomain: "mylife-19882.firebaseapp.com",
@@ -101,19 +101,28 @@
     measurementId: "G-5S207R8QX0"
   };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const auth = getAuth();
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
 
+  const auth = firebase.auth();
   const messageEl = document.getElementById('auth-message');
 
   // Sign Up
   document.getElementById('signup-btn').addEventListener('click', () => {
+    const username = document.getElementById('username').value.trim();
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
 
-    createUserWithEmailAndPassword(auth, email, password)
+    if (!username) {
+      messageEl.textContent = "Please enter a username!";
+      return;
+    }
+
+    auth.createUserWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        // Set display name (username)
+        return userCredential.user.updateProfile({ displayName: username });
+      })
       .then(() => {
         messageEl.textContent = "Account created! Redirecting...";
         setTimeout(() => { window.location.href = "index.html"; }, 1000);
@@ -128,7 +137,7 @@
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
 
-    signInWithEmailAndPassword(auth, email, password)
+    auth.signInWithEmailAndPassword(email, password)
       .then(() => {
         messageEl.textContent = "Logged in! Redirecting...";
         setTimeout(() => { window.location.href = "index.html"; }, 1000);
