--- a/index.html
+++ b/index.html
@@ -41,20 +41,19 @@
     box-shadow: 0 0 10px #ff0000;
   }
 
-  /* About Me Box */
   .about-box {
     background: rgba(0,0,0,0.7);
     border: 2px solid #ff0000;
     box-shadow: 0 0 10px #ff0000;
     padding: 20px;
     margin: 0 20px;
+    text-align: center;
   }
 
   .about-box h2 {
     color: #ff0000;
     text-transform: uppercase;
     letter-spacing: 2px;
-    text-align: center;
     text-shadow: 0 0 8px #ff0000;
     margin-top: 0;
   }
@@ -62,11 +61,9 @@
   .about-box p {
     font-size: 14px;
     line-height: 1.6;
-    text-align: center;
     margin: 5px 0;
   }
 
-  /* Bottom Flex: Interests + Buttons + Spotify */
   .bottom-flex {
     display: flex;
     justify-content: center;
@@ -98,7 +95,6 @@
     text-shadow: 0 0 6px;
     font-weight: bold;
   }
-
   .interests .metal { color: #ff00ff; text-shadow: 0 0 6px hotpink; }
   .interests .punk { color: #00ffff; text-shadow: 0 0 6px cyan; }
   .interests .games { color: #ffff00; text-shadow: 0 0 6px yellow; }
@@ -120,7 +116,6 @@
     margin-top: 20px;
   }
 
-  /* Buttons Box */
   .page-buttons button {
     padding: 8px 12px;
     margin: 5px;
@@ -136,15 +131,14 @@
     background: rgba(255,0,255,0.1);
   }
 
-  /* Spotify box */
   .spotify-box iframe {
     border-radius: 12px;
     width: 100%;
     height: 352px;
   }
-
- 
-
+</style>
+</head>
+<body>
 
 <!-- Top images and text -->
 <div class="top-flex">
@@ -218,6 +212,3 @@
 
 </body>
 </html>
-
-
-
