--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MyChat</title>
+<title>My Site</title>
 <style>
   body {
     background-color: black;
@@ -162,6 +162,13 @@
   <p style="margin-top:10px; color:#ff0000; text-shadow:0 0 6px hotpink;">Made by IamTheLight11</p>
 </div>
 
+<!-- Page Buttons (above bottom boxes) -->
+<div class="bottom-flex page-buttons">
+  <button onclick="window.location.href='page1.html'">Vids/Pics</button>
+  <button onclick="window.location.href='page2.html'">Rambles</button>
+  <button onclick="window.location.href='page3.html'">Chat</button>
+</div>
+
 <!-- Bottom Flex: Interests + YouTube + Spotify -->
 <div class="bottom-flex">
 
@@ -196,13 +203,6 @@
   <div class="box spotify-box">
     <iframe src="https://open.spotify.com/embed/playlist/16Q1EiWg3w8S9VcPnXQqwc?utm_source=generator" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
-</div>
-
-<!-- Page Buttons -->
-<div class="bottom-flex page-buttons">
-  <button onclick="window.location.href='page1.html'">Vids/Pics</button>
-  <button onclick="window.location.href='page2.html'">Rambles</button>
-  <button onclick="window.location.href='page3.html'">Chat</button>
 </div>
 
 <!-- Footer -->
