--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <!-- About Me Box -->
 <div class="about-box">
-  <h2>☠ WELCOME TO MY SITE ☠</h2>
+  <h2>☠ WELCOME TO MYCHAT ☠</h2>
   <p><b>est. 2025</b></p>
   <p>born in 2011</p>
   <p>True till death.<br>
@@ -212,3 +212,4 @@
 
 </body>
 </html>
+
