--- a/page3.html
+++ b/page3.html
@@ -98,7 +98,7 @@
 <div class="chat-box">
   <h2 class="neon-text">⚡ MyChat ⚡</h2>
   <textarea placeholder="Type your message here..."></textarea>
-  <button onclick="alert('chat will be up and running soon')">Send</button>
+  <button onclick="alert('chat is under construction now :p, will be up and running soon.')">Send</button>
 </div>
 
 <!-- Footer -->
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
