--- a/index.html
+++ b/index.html
@@ -144,7 +144,20 @@
 <header>
   <h1>☠ WELCOME TO MYCHAT ☠</h1>
   <p style="color:#ff0000; text-shadow:0 0 6px hotpink;">Made by IamTheLight11</p>
+  <button style="
+    position:absolute;
+    top:20px;
+    right:20px;
+    padding:8px 12px;
+    border:2px solid hotpink;
+    background: rgba(0,0,0,0.7);
+    color: hotpink;
+    cursor:pointer;
+    border-radius:5px;
+    font-family: 'Courier New', monospace;"
+    onclick="window.location.href='login.html'">Login</button>
 </header>
+
 
 <div class="page-buttons">
   <button onclick="window.location.href='page1.html'">Vids/Pics</button>
@@ -187,4 +200,5 @@
 
 </body>
 </html>
+
 
