--- a/login.html
+++ b/login.html
@@ -1,74 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - MyChat</title>
-<style>
-  body {
-    background-color: black;
-    color: #c0c0c0;
-    font-family: 'Courier New', monospace;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
-
-  .login-box {
-    background: rgba(0,0,0,0.8);
-    border: 2px solid #ff0000;
-    padding: 30px;
-    box-shadow: 0 0 10px #ff0000;
-    text-align: center;
-    border-radius: 8px;
-  }
-
-  h2 {
-    color: #ff0000;
-    text-shadow: 0 0 8px #ff0000;
-    margin-bottom: 20px;
-  }
-
-  input {
-    padding: 10px;
-    margin: 10px 0;
-    width: 80%;
-    border-radius: 5px;
-    border: 1px solid #ff0000;
-    background: black;
-    color: #c0c0c0;
-  }
-
-  button {
-    padding: 10px 20px;
-    border: 2px solid hotpink;
-    background: rgba(0,0,0,0.7);
-    color: hotpink;
-    cursor: pointer;
-    font-weight: bold;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-
-  button:hover {
-    background: rgba(255,0,255,0.1);
-  }
-
-  .error {
-    color: red;
-    margin-top: 10px;
-  }
-</style>
-</head>
-<body>
-
 <div class="login-box">
   <h2>Login to MyChat</h2>
   <input type="text" id="username" placeholder="Username"><br>
   <input type="password" id="password" placeholder="Password"><br>
   <button onclick="login()">Login</button>
+  <button onclick="cancelLogin()">Cancel</button>
   <p class="error" id="errorMsg"></p>
 </div>
 
@@ -87,14 +22,13 @@
     const account = accounts.find(acc => acc.username === user && acc.password === pass);
 
     if(account) {
-      // Successful login
-      window.location.href = 'index.html'; // redirect to main page
+      window.location.href = 'index.html';
     } else {
-      // Failed login
       errorMsg.textContent = "Invalid username or password.";
     }
   }
-</script>
 
-</body>
-</html>
+  function cancelLogin() {
+    window.location.href = 'index.html'; // Go back to main page
+  }
+</script>
