--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 <title>Login - MyChat</title>
 <style>
   body {
-    background-color: black;
+    background: black;
     color: #c0c0c0;
     font-family: 'Courier New', monospace;
     display: flex;
@@ -15,57 +15,62 @@
     height: 100vh;
     margin: 0;
   }
-
-  .login-box {
-    background: rgba(0,0,0,0.8);
+  .container {
+    background: rgba(0,0,0,0.7);
     border: 2px solid #ff0000;
-    padding: 30px;
-    box-shadow: 0 0 10px #ff0000;
+    padding: 20px;
+    border-radius: 10px;
     text-align: center;
-    border-radius: 8px;
   }
-
-  h2 { color: #ff0000; text-shadow: 0 0 8px #ff0000; margin-bottom: 20px; }
-  input { padding: 10px; margin: 10px 0; width: 80%; border-radius:5px; border:1px solid #ff0000; background:black; color:#c0c0c0; }
-  button { padding:10px 20px; margin:5px; border:2px solid hotpink; background:rgba(0,0,0,0.7); color:hotpink; cursor:pointer; border-radius:5px; font-family:'Courier New', monospace; }
-  button:hover { background: rgba(255,0,255,0.1); }
-  .error { color:red; margin-top:10px; }
+  input {
+    padding: 8px;
+    margin: 5px 0;
+    width: 80%;
+    border-radius: 5px;
+    border: 1px solid #ff0000;
+    background: black;
+    color: #fff;
+  }
+  button {
+    padding: 8px 12px;
+    margin: 5px;
+    border: 2px solid hotpink;
+    background: rgba(0,0,0,0.7);
+    color: hotpink;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  button:hover {
+    background: rgba(255,0,255,0.1);
+  }
 </style>
 </head>
 <body>
 
-<div class="login-box">
+<div class="container">
   <h2>Login to MyChat</h2>
   <input type="text" id="username" placeholder="Username"><br>
   <input type="password" id="password" placeholder="Password"><br>
   <button onclick="login()">Login</button>
-  <button onclick="cancelLogin()">Cancel</button><br>
-  <button onclick="window.location.href='signup.html'">Make an Account</button>
-  <p class="error" id="errorMsg"></p>
+  <button onclick="window.location.href='signup.html'">Sign Up</button>
+  <button onclick="window.location.href='index.html'">Cancel</button>
 </div>
 
+<script src="storage.js"></script>
 <script>
-  function login() {
-    const user = document.getElementById('username').value;
-    const pass = document.getElementById('password').value;
-    const errorMsg = document.getElementById('errorMsg');
+function login() {
+  const user = document.getElementById('username').value.trim();
+  const pass = document.getElementById('password').value;
 
-    // Get accounts from localStorage
-    const accounts = JSON.parse(localStorage.getItem('accounts') || '[]');
-    const account = accounts.find(acc => acc.username === user && acc.password === pass);
-
-    if(account) {
-      // Save logged-in user
-      localStorage.setItem('loggedInUser', user);
-      window.location.href = 'index.html';
-    } else {
-      errorMsg.textContent = "Invalid username or password.";
-    }
+  const storedPass = getUser(user);
+  if(storedPass && storedPass === pass){
+    alert("Login successful!");
+    setLoggedInUser(user);
+    window.location.href = "index.html";
+  } else {
+    alert("Invalid username or password!");
   }
-
-  function cancelLogin() {
-    window.location.href = 'index.html';
-  }
+}
 </script>
 
 </body>
