--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MyChat Forum</title>
+<title>Forum</title>
 <style>
   body {
     background-color: black;
@@ -17,69 +17,82 @@
     margin: 0;
     padding: 0;
   }
+
   header {
     text-align: center;
     padding: 20px;
     border-bottom: 2px solid #ff0000;
     box-shadow: 0 0 10px #ff0000;
     background: rgba(0,0,0,0.7);
+    position: relative;
   }
+
   header h1 {
     color: #ff0000;
     text-shadow: 0 0 8px #ff0000;
     margin: 0;
+    font-size: 28px;
   }
+
+  .back-home {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 8px 12px;
+    border: 2px solid hotpink;
+    background: rgba(0,0,0,0.7);
+    color: hotpink;
+    cursor: pointer;
+    border-radius: 5px;
+    font-family: 'Courier New', monospace;
+  }
+
   .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
+    max-width: 800px;
+    margin: 20px auto;
   }
+
   .post {
     background: rgba(0,0,0,0.7);
     border: 2px solid #ff0000;
     box-shadow: 0 0 10px #ff0000;
     padding: 15px;
-    width: 100%;
-    max-width: 600px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
+
   .post h3 {
     color: #ff0000;
     text-shadow: 0 0 8px #ff0000;
     margin-top: 0;
   }
+
   .post p {
     margin: 5px 0;
   }
+
   .post .meta {
     font-size: 12px;
     color: #888;
   }
+
   .new-post {
-    background: rgba(0,0,0,0.7);
-    border: 2px solid hotpink;
-    box-shadow: 0 0 10px hotpink;
-    padding: 15px;
-    width: 100%;
-    max-width: 600px;
     margin-bottom: 20px;
-    text-align: center;
   }
+
   .new-post textarea {
-    width: 90%;
-    height: 60px;
-    background: black;
+    width: 100%;
+    height: 80px;
+    background: rgba(0,0,0,0.7);
+    border: 2px solid #ff0000;
     color: #c0c0c0;
-    border: 2px solid hotpink;
-    border-radius: 5px;
-    padding: 5px;
+    padding: 8px;
     resize: none;
     font-family: 'Courier New', monospace;
   }
+
   .new-post button {
     padding: 8px 12px;
-    margin-top: 10px;
+    margin-top: 8px;
     border: 2px solid hotpink;
     background: rgba(0,0,0,0.7);
     color: hotpink;
@@ -93,59 +106,70 @@
 
 <header>
   <h1>Forum</h1>
+  <button class="back-home" onclick="window.location.href='index.html'">Back to Home</button>
 </header>
 
 <div class="container">
   <div class="new-post">
-    <h3>New Post</h3>
-    <textarea id="postContent" placeholder="Write your post here..." required></textarea><br>
+    <textarea id="postContent" placeholder="Write your post here..."></textarea>
     <button onclick="addPost()">Post</button>
   </div>
-
   <div id="postsContainer"></div>
 </div>
 
 <script>
-const username = localStorage.getItem('loggedInUser') || 'Anonymous';
+const postsContainer = document.getElementById('postsContainer');
 
-async function fetchPosts() {
-  const res = await fetch('/api/posts');
-  const posts = await res.json();
-  const container = document.getElementById('postsContainer');
-  container.innerHTML = '';
-  posts.reverse().forEach(post => {
-    const div = document.createElement('div');
-    div.className = 'post';
-    div.innerHTML = `
-      <h3>${post.username}</h3>
-      <p>${post.content}</p>
-      <p class="meta">${new Date(post.timestamp).toLocaleString()}</p>
-    `;
-    container.appendChild(div);
-  });
-}
-
-async function addPost() {
-  const content = document.getElementById('postContent').value.trim();
-  if (!content) return alert('Cannot post empty message!');
-  if (username === 'Anonymous') return alert('You must be logged in to post!');
-  
-  const res = await fetch('/api/posts', {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify({ username, content })
-  });
-  if (res.ok) {
-    document.getElementById('postContent').value = '';
-    alert('Post added successfully!');
-    fetchPosts();
-  } else {
-    alert('Failed to add post.');
+async function loadPosts() {
+  try {
+    const res = await fetch('/posts.json');
+    const posts = await res.json();
+    postsContainer.innerHTML = '';
+    posts.reverse().forEach(post => {
+      const postDiv = document.createElement('div');
+      postDiv.className = 'post';
+      postDiv.innerHTML = `<h3>${post.username}</h3><p>${post.content}</p><p class="meta">${post.timestamp}</p>`;
+      postsContainer.appendChild(postDiv);
+    });
+  } catch (err) {
+    console.error('Failed to load posts', err);
   }
 }
 
-fetchPosts();
-setInterval(fetchPosts, 5000); // auto-refresh every 5 seconds
+async function addPost() {
+  const username = localStorage.getItem('loggedInUser');
+  const content = document.getElementById('postContent').value.trim();
+  if (!username) {
+    alert('You must be logged in to post!');
+    return;
+  }
+  if (!content) {
+    alert('Post cannot be empty!');
+    return;
+  }
+  try {
+    const res = await fetch('/add-post', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ username, content })
+    });
+    const data = await res.json();
+    if (data.success) {
+      alert('Post added successfully!');
+      document.getElementById('postContent').value = '';
+      loadPosts();
+    } else {
+      alert('Failed to add post');
+    }
+  } catch (err) {
+    alert('Failed to add post');
+    console.error(err);
+  }
+}
+
+// Auto-refresh every 5 seconds
+loadPosts();
+setInterval(loadPosts, 5000);
 </script>
 
 </body>
